--- a/roles/install-kafka/templates/kafka.service.j2
+++ b/roles/install-kafka/templates/kafka.service.j2
@@ -7,6 +7,7 @@ After=network.target
 Type=simple
 User={{ kafka_user }}
 Group={{ kafka_group }}
+Environment="KAFKA_OPTS={% if sasl_enabled == "true" %}{{ sasl_env_string }}{% endif %} {% if metrics_enabled == "true" %}{{ metrics_env_string }}{% endif %}"
 ExecStart={{ start_kafka_server_path }} {{ server_properties_path }}
 ExecStop={{ stop_kafka_server_path }}
 Restart=on-failure
